Bugfix: avoid duplicated categories